# EVCS

./: README.rst  setup.cfg
evcs/: __init__.py  backends.py
evcs/backends/: __init__.py  hg.py
tests/: test_get_repo.py  test_serve.py
tests/sample_hg/.hg/: dirstate  last-message.txt  undo.dirstate
tests/sample_hg/.hg/cache/: tags
tests/sample_hg/.hg/store/: 00changelog.i  00manifest.i  fncache  undo
tests/sample_hg/.hg/store/data/: sample.txt.i
