[metadata]
name = EVCS
version = 0.1
summary = Extended VCS is an overlayer to vcs project (Abstraction layer for SCM) in order to add some specific features.
download_url = UNKNOWN
home_page = https://github.com/Lothiraldan/EVCS
author = FELD Boris
author_email = lothiraldan@gmail.com
requires-dist = [vcs, unittest2]

classifier =
    License :: OSI Approved :: MIT License

[files]
packages = evcs
extra_files = setup.cfg